--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,15 +30,25 @@
             android:textSize="14sp"/>
 
         <TextView
+            android:id="@+id/usuarioLogado"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" usuario!"
+            android:text=""
             android:textColor="@color/white"
             android:fontFamily="@font/gabrielaregular"
             android:layout_gravity="center_vertical"
             android:textSize="14sp"/>
     </LinearLayout>
 
+
+    <Button
+        android:id="@+id/idBtnLogout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_button_login"
+        android:text="Logout"
+        android:textColor="@color/white"
+        android:fontFamily="@font/gabrielaregular"/>
 
     <LinearLayout
         android:layout_width="match_parent"
