--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -52,6 +52,16 @@
             android:fontFamily="@font/gabrielaregular"/>
 
         <EditText
+            android:id="@+id/idTelefoneCadastro"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="15dp"
+            android:hint="@string/hintTelefone"
+            android:fontFamily="@font/gabrielaregular"/>
+
+        <EditText
             android:id="@+id/idEmailCadastro"
             android:layout_width="match_parent"
             android:layout_height="40dp"
