--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -18,6 +18,7 @@
             android:fontFamily="@font/gabrielaregular"
             android:text="@string/tvCadastro"
             android:textSize="20sp"
+            android:textColor="@color/black"
             android:textAlignment="center"
             android:layout_marginTop="30sp"/>
 
@@ -29,6 +30,8 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="130dp"
             android:hint="@string/hintNome"
+            android:textColor="@color/black"
+            android:textColorHint="@color/blackhint"
             android:fontFamily="@font/gabrielaregular"/>
 
         <EditText
@@ -39,6 +42,8 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="15dp"
             android:hint="@string/hintSobrenome"
+            android:textColorHint="@color/blackhint"
+            android:textColor="@color/black"
             android:fontFamily="@font/gabrielaregular"/>
 
         <EditText
@@ -49,6 +54,8 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="15dp"
             android:hint="@string/hintDataNascimento"
+            android:textColorHint="@color/blackhint"
+            android:textColor="@color/black"
             android:fontFamily="@font/gabrielaregular"/>
 
         <EditText
@@ -69,6 +76,8 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="15dp"
             android:hint="@string/hintEmail"
+            android:textColorHint="@color/blackhint"
+            android:textColor="@color/black"
             android:fontFamily="@font/gabrielaregular"
             android:inputType="textEmailAddress"/>
 
@@ -80,6 +89,8 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="15dp"
             android:hint="@string/hintSenha"
+            android:textColorHint="@color/blackhint"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             android:fontFamily="@font/gabrielaregular"/>
 
@@ -91,6 +102,8 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="15dp"
             android:hint="@string/hintConfirmarSenha"
+            android:textColorHint="@color/blackhint"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             android:fontFamily="@font/gabrielaregular"/>
 
