--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="blackhint">#2C2C2C</color>
     <color name="white">#FFFFFFFF</color>
     <color name="VerdeEscuro">#475446</color>
     <color name="VerdeClaro">#80B67B</color>
