--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,71 +12,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/VerdeEscuro"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints">
 
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/imghome"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:src="@drawable/imghome" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hintCiao"
-            android:textColor="@color/white"
-            android:fontFamily="@font/gabrielaregular"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="150dp"
-            android:textSize="14sp"/>
+            android:fontFamily="@font/gabrielaregular"
+            android:text="@string/hintCiao"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/usuarioLogado"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/gabrielaregular"
             android:text=""
             android:textColor="@color/white"
-            android:fontFamily="@font/gabrielaregular"
-            android:layout_gravity="center_vertical"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
     </LinearLayout>
 
-
-    <Button
-        android:id="@+id/idBtnLogout"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/custom_button_login"
-        android:text="Logout"
-        android:textColor="@color/white"
-        android:fontFamily="@font/gabrielaregular"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="481dp"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_navmenu"
+        app:itemTextColor="@color/white"
         android:background="@color/VerdeEscuro"
-        android:orientation="horizontal">
+        app:itemIconTint="@color/white"/>
 
-        <ImageView
-            android:id="@+id/testehome"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="60dp"
-            android:src="@drawable/homeicon" />
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginRight="70dp"
-            android:src="@drawable/menuicon"/>
-
-        <Button
-            android:id="@+id/btnPerfil"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/personicon" />
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
