--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,6 +40,14 @@
             android:text=""
             android:textColor="@color/white"
             android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/BtnMenu"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="Menu"
+            android:textColor="@color/black" />
+
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
