Confirmação de reserva

--- a/app/src/main/res/layout/activity_confirmar_reserva.xml
+++ b/app/src/main/res/layout/activity_confirmar_reserva.xml
@@ -1,9 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConfirmarReservaActivity">
+    tools:context=".ConfirmarReservaActivity"
+    android:orientation="vertical"
+    android:background="@color/FundoClaro">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/confirmarDataReserva"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textColor="@color/black"
+            android:text=""
+            android:fontFamily="@font/gabrielaregular"
+            android:layout_gravity="center_vertical"
+            android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/confirmarQtdPessoas"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textColor="@color/black"
+            android:text=""
+            android:fontFamily="@font/gabrielaregular"
+            android:layout_gravity="center_vertical"
+            android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/confirmarPrecisaCadeiraBebe"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textColor="@color/black"
+            android:text=""
+            android:fontFamily="@font/gabrielaregular"
+            android:layout_gravity="center_vertical"
+            android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/confirmarObservacoes"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textColor="@color/black"
+            android:text=""
+            android:fontFamily="@font/gabrielaregular"
+            android:layout_gravity="center_vertical"
+            android:textSize="14sp"/>
+
+        <Button
+            android:id="@+id/idBtnConfirmarReserva"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:background="@drawable/custom_button_login"
+            android:text="Confirmar Reserva"
+            android:textColor="@color/white"
+            android:fontFamily="@font/gabrielaregular"/>
+
+    </LinearLayout>
+</ScrollView>
+
