--- a/app/src/main/res/layout/activity_cancelar_reserva.xml
+++ b/app/src/main/res/layout/activity_cancelar_reserva.xml
@@ -10,4 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <TextView
+        android:id="@+id/listaVaziaCancelarReserva"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textColor="@color/black"
+        android:text=""
+        android:fontFamily="@font/gabrielaregular"
+        android:layout_gravity="center_vertical"
+        android:textSize="14sp"/>
 </LinearLayout>
