--- a/app/src/main/res/layout/activity_apresentacao.xml
+++ b/app/src/main/res/layout/activity_apresentacao.xml
@@ -19,6 +19,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:textColor="@color/VerdeEscuro"
         android:fontFamily="@font/gabrielaregular"/>
 
     <TextView
@@ -29,5 +30,6 @@
         android:textAlignment="center"
         android:textSize="26sp"
         android:textStyle="italic"
+        android:textColor="@color/VerdeEscuro"
         android:fontFamily="@font/gabrielaregular"/>
 </LinearLayout>
