--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -6,9 +6,31 @@
     tools:context=".fragments.MenuFragment"
     android:background="@color/black">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:src="@drawable/menuicon"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+        <Button
+            android:id="@+id/BtnCardapio"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Cardápio"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/BtnReservaCancelamento"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Reservas e Cancelamentos"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/BtnContato"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Contatos"
+            android:textColor="@color/black" />
+    </LinearLayout>
 </FrameLayout>
