--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -70,7 +70,11 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="15dp"
             android:hint="@string/hintTelefone"
-            android:fontFamily="@font/gabrielaregular"/>
+            android:textColorHint="@color/blackhint"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/VerdeEscuro"/>
+
+        android:fontFamily="@font/gabrielaregular"/>
 
         <EditText
             android:id="@+id/idEmailCadastro"
