--- a/app/src/main/res/layout/activity_menu_reserva.xml
+++ b/app/src/main/res/layout/activity_menu_reserva.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuReservaActivity"
+    tools:context=".CardapioActivity"
     android:orientation="vertical"
     android:background="@color/FundoClaro">
 
@@ -14,36 +13,148 @@
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
-        <Button
+        <!--Header-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/VerdeEscuro">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/reservascancelamentosTitle"
+                android:textColor="@color/white"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/gabrielaregular"
+                android:layout_gravity="center"
+                android:textSize="18sp"/>
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/imgheader"
+                android:layout_gravity="center"
+                android:layout_marginStart="80dp"/>
+        </LinearLayout>
+
+        <!--Consultar Reservas-->
+        <LinearLayout
             android:id="@+id/BtnConsultarReserva"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Consultar Reservas"
-            android:textColor="@color/black" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp">
 
-        <Button
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/consultarreservasTitle"
+                    android:layout_marginStart="20dp"
+                    android:fontFamily="@font/gabrielaregular"
+                    android:textColor="@color/VerdeEscuro"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrowicon"
+                    android:layout_marginStart="165dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/VerdeEscuro"/>
+        </LinearLayout>
+
+        <!--Reservar-->
+        <LinearLayout
             android:id="@+id/BtnReservar"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Reservar"
-            android:textColor="@color/black" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp">
 
-        <Button
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/reservarTitle"
+                    android:layout_marginStart="20dp"
+                    android:fontFamily="@font/gabrielaregular"
+                    android:textColor="@color/VerdeEscuro"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrowicon"
+                    android:layout_marginStart="130dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/VerdeEscuro"/>
+        </LinearLayout>
+
+        <!--Cancelar Reserva-->
+        <LinearLayout
             android:id="@+id/BtnCancelarReserva"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Cancelar Reserva"
-            android:textColor="@color/black" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cancelarreservarTitle"
+                    android:layout_marginStart="20dp"
+                    android:fontFamily="@font/gabrielaregular"
+                    android:textColor="@color/VerdeEscuro"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrowicon"
+                    android:layout_marginStart="190dp"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/VerdeEscuro"/>
+        </LinearLayout>
+
     </LinearLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/bottom_navmenu"
-        app:itemTextColor="@color/white"
-        android:background="@color/VerdeEscuro"
-        app:itemIconTint="@color/white"/>
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+</ScrollView>
