--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     tools:context=".fragments.HomeFragment"
     android:background="@color/FundoClaro">
 
-
+    <!--Header-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,4 +41,13 @@
             android:textSize="14sp" />
 
     </LinearLayout>
+
+    <com.denzcoskun.imageslider.ImageSlider
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="150dp"
+        android:id="@+id/image_slider"/>
+
 </FrameLayout>
